@@ -35,6 +35,28 @@ Example    : STRAWBERRIES DWARF\n\r\
 Description: \n\r\
 This ability governs allergies.
 
+AMBIANCE=AMBIANCEADDER
+AMBIANCEADDER=\
+Property   : Ambiance Adder\n\r\
+Targets    : Mobs, Items, Exits, Rooms, Areas\n\r\
+Parameters : [AMBIANCE TEXT](;[AMBIANCE TEXT]...)\n\r\
+Example    : ^YGLOWING^N;^hshining^n\n\r\
+Description: \n\r\
+Allows the builder to add permanent ambiance "flags" to an object.\n\r\
+Ambiances, by default, are designed for adding random text to the \
+room display text of items and mobs, such as "glowing" or other \
+decorations.  Ambiances also have a 'flagging' capability, when \
+specific string values are used.  These include: \n\r\
+-ALL : hides all natural flag displays\n\r\
+-MOST : hides most natural flag displays\n\r\
+-GOOD, -EVIL, -INVISIBLE, -SNEAKING : hides these flag displays\n\r\
+-HIDDEN, -MAGIC, -METAL, -GLOWING :   hides these flag displays\n\r\
+-BUSY, -LAW, -CHAOS :   hides these flag displays\n\r\
+-BOUND, -FLYING, -FALLING :   hides these flag displays\n\r\
+(?)X:Y : shows X if target heard, Y otherwise\n\r\
+@X : X is an special flag, not to be shown by default\n\r\
+#X : X is shown if @x is also an ambiance
+
 BAD_REPUTATION=BADREPUTATION
 BADREPUTATION=<ABILITY>\
 Property   : Bad Reputation\n\r\
