@@ -31,7 +31,8 @@
  39. New prompt flag: combat-only sections
  40. Expertises now support .2 files like achievements, and MODIFY EXPERTISE now works.
  41. Prop_RoomView has new parms, LONGLOOK, and ATTACK to give ship-like abilities
-# Build 5.9.11.1 Release 02/26/2021
+ 42. New misc property: AmbianceAdder, for adding random ambiances to things.
+ # Build 5.9.11.1 Release 02/26/2021
   Bug Fix Release:
   1. Fixed experience gains when EFFECTCXL is 0.
   2. Changed EFFECTCXL default back to 0.
